# Solitaire

./: CMakeLists.txt  COMMANDS.md  MOVE-FORMAT.md  README.md  build.bat
src/: Deck.cpp  Deck.h  Move.cpp  Move.h  Position.cpp  Position.h  main.cpp
src/UI/: Display.cpp  Display.h  Renderer.cpp  Renderer.h
src/containers/: Deck.cpp  Deck.h  History.cpp  History.h  Move.cpp  Move.h
src/logic/: GameController.cpp  GameController.h  Position.cpp  Position.h  PositionLogic.cpp
